--- a/tests/data/groundtruth/docling_v2/2305.03393v1-pg9.md
+++ b/tests/data/groundtruth/docling_v2/2305.03393v1-pg9.md
@@ -1,3 +1,7 @@
+Optimized Table Tokenization for Table Structure Recognition
+
+9
+
 order to compute the TED score. Inference timing results for all experiments were obtained from the same machine on a single core with AMD EPYC 7763 CPU @2.45 GHz.
 
 ## 5.1 Hyper Parameter Optimization
