--- a/docs/examples/rag_weaviate.ipynb
+++ b/docs/examples/rag_weaviate.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "## A recipe 🧑‍🍳 🐥 💚\n",
     "\n",
-    "This is a code recipe that uses [Weaviate](https://weaviate.io/) to perform RAG over PDF documents parsed by [Docling](https://ds4sd.github.io/docling/).\n",
+    "This is a code recipe that uses [Weaviate](https://weaviate.io/) to perform RAG over PDF documents parsed by [Docling](https://docling-project.github.io/docling/).\n",
     "\n",
     "In this notebook, we accomplish the following:\n",
     "* Parse the top machine learning papers on [arXiv](https://arxiv.org/) using Docling\n",
